PORTAL: Layout refactored, start page refactored

--- a/projects/kolenergo-core/src/lib/ui/components/slider/components/slider/slider.component.less
+++ b/projects/kolenergo-core/src/lib/ui/components/slider/components/slider/slider.component.less
@@ -33,7 +33,7 @@
       top: 0px;
       right: 0px;
       height: 100%;
-      // background-size: cover !important;
+      background-size: cover !important;
       // background-position-x: center !important;
       // background-position-y: top !important;
       background: #edf0f2 fixed;
