--- a/projects/kolenergo-core/src/lib/ui/components/slider/components/slider/slider.component.html
+++ b/projects/kolenergo-core/src/lib/ui/components/slider/components/slider/slider.component.html
@@ -4,10 +4,9 @@
   <div class="slider-slides">
     <div class="slide"
          [@fade]="slide.isActive ? 'in' : 'out'"
-         *ngFor="let slide of slides"
+         *ngFor="let slide of slides; let i = index"
          [style.zIndex]="slide.isActive ? '2' : '1'"
          [style.background]="'url(' + slide.url + ')'"
-         [style.background-size]="slide.size ? slide.size.toString() : 'cover !important'"
          [style.background-position-y]="slide.backgroundPositionY.toString()"
          [style.background-position-x]="slide.backgroundPositionX.toString()">
     </div>
