--- a/projects/kolenergo-core/src/lib/ui/styles.less
+++ b/projects/kolenergo-core/src/lib/ui/styles.less
@@ -1,3 +1,4 @@
 @import '~@fortawesome/fontawesome-free/css/all.css';
 @import './styles/user-search';
 @import './styles/company-select';
+@import './styles/button';
