--- a/projects/portal/src/app/portal/components/portal/portal.component.html
+++ b/projects/portal/src/app/portal/components/portal/portal.component.html
@@ -1,16 +1,13 @@
 <div id="app">
   <!-- Start: Шапка приложения -->
   <header>
-    <div class="header-container">
-      <!--<div class="background"></div>-->
-      <kol-slider [interval]="20">
-        <kol-slide [url]="'http://127.0.0.1:4200/assets/header-bg-1.jpg'" [size]="'100%'" [positionY]="'-1000px'"></kol-slide>
-        <kol-slide [url]="'http://127.0.0.1:4200/assets/header-bg-7.jpg'" [positionY]="'-500px'"></kol-slide>
-      </kol-slider>
-      <div class="gradient"></div>
-    </div>
+    <kol-slider [interval]="20">
+      <kol-slide [url]="'http://127.0.0.1:4200/assets/header-bg-1.jpg'"></kol-slide>
+      <kol-slide [url]="'http://127.0.0.1:4200/assets/header-bg-7.jpg'"></kol-slide>
+    </kol-slider>
+    <div class="gradient"></div>
     <div class="content">
-      <div class="row justify-content-center">
+      <div class="row no-gutters justify-content-center">
         <div class="col-11 col-md-11 col-lg-10 col-xl-10 d-flex flex-row justify-content-between align-items-center pt-3">
           <div class="logo"></div>
           <div>
@@ -29,9 +26,9 @@
   <!-- End: Шапка приложения -->
 
   <!-- Start: Контент приложения -->
-  <main id="app-content mb-4">
-    <div class="row justify-content-center">
-      <div class="col-11 col-md-11 col-lg-10 col-xl-10 pt-4 pb-4">
+  <main>
+    <div class="row no-gutters justify-content-center">
+      <div id="application-content" class="col-11 col-md-11 col-lg-11 col-xl-10">
         <router-outlet></router-outlet>
       </div>
     </div>
