--- a/projects/portal/src/app/portal/components/start/start.component.less
+++ b/projects/portal/src/app/portal/components/start/start.component.less
@@ -21,11 +21,255 @@
 
 
 
+#start-component {
+  display: flex;
+  flex-direction: row;
+  //height: 800px;
+
+  .service-column {
+    width: 400px;
+    background: #ECECEC;
+    border-top-left-radius: 12px;
+
+    .caption {
+      font-family: 'Open Sans', serif;
+      font-size: 16px;
+      //line-height: 14px;
+      font-weight: 300;
+      //text-transform: uppercase;
+      color: #607d8b;
+    }
+
+    .services {
+      display: flex;
+      flex-direction: column;
+      justify-content: flex-start;
+      flex-wrap: wrap;
+
+      .row {
+        margin-left: -25px !important;
+        margin-right: -25px !important;
+        padding-left: 25px !important;
+        padding-right: 25px !important;
+      }
+
+      .service {
+        overflow: hidden;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        align-items: center;
+        // flex-wrap: wrap;
+        width: 90px;
+        height: 90px;
+        margin-top: 10px;
+        padding: 10px;
+        box-sizing: border-box;
+        text-align: center;
+        text-decoration: none;
+        // background: #eeeeee;
+        // border: 2px solid #eceff1;
+        // border: 1px solid transparent;
+        border-radius: 4px;
+        // border-radius: 15px/30px;
+        .border-squircle(50%; 50%);
+
+        transition: all linear 0.1s;
+
+        &.empty {
+          background: transparent !important;
+          cursor: default;
+        }
+
+
+
+        &:hover {
+          // border: 4px solid #eceff1;
+          // box-shadow: inset 0px 0px 10px rgba(0,0,0,0.15);
+          box-shadow: 0 8px 10px 1px rgba(0,0,0,0.14), 0 3px 14px 2px rgba(0,0,0,0.12), 0 5px 5px -3px rgba(0,0,0,0.2);
+          // transform: rotateZ(90deg);
+          transform: scaleY(1,5);
+          // box-shadow: 0 0 0 40px #53a7ea;
+
+          .service-caption {
+            //padding-top: 10px;
+          }
+
+        }
+
+        &.ukitasu {
+          background: linear-gradient(to bottom, rgba(51, 166, 198, 1) 10%, rgba(201, 225, 237, 1) 90%);
+
+          &:hover {
+            background: linear-gradient(to bottom, rgba(51, 166, 198, 1) 10%, rgba(51, 166, 198, 1) 90%);
+            .service-icon {
+              img {
+                transform: scale(1.2);
+                //margin-bottom: -5%;
+              }
+            }
+          }
+
+          .service-icon {
+            img {
+              width: 90%;
+              margin-bottom: -35%;
+            }
+          }
+        }
+
+        &.auto {
+          background: linear-gradient(to bottom, rgba(111, 170, 167, 1) 10%, rgba(210, 224, 224, 1) 90%);
+
+          &:hover {
+            background: linear-gradient(to bottom, rgba(111, 170, 167, 1) 10%, rgba(111, 170, 167, 1) 90%);
+            .service-icon {
+              img {
+                transform: scale(1.2);
+              }
+            }
+          }
+
+          .service-icon {
+            img {
+              width: 90%;
+              margin-bottom: -45%;
+            }
+          }
+        }
+
+        &.aho {
+          background: linear-gradient(to bottom, rgba(205, 165, 132, 1) 10%, rgba(232, 201, 134, 1) 90%);
+
+          &:hover {
+            background: linear-gradient(to bottom, rgba(205, 165, 132, 1) 10%, rgba(205, 165, 132, 1) 90%);
+            .service-icon {
+              img {
+                transform: scale(1.2);
+              }
+            }
+          }
+
+          .service-icon {
+            img {
+              width: 95%;
+              margin-bottom: -30%;
+            }
+          }
+        }
+
+        &.billing-lists {
+          background: linear-gradient(to bottom, rgba(254, 156, 161, 1) 10%, rgba(242, 217, 219, 1) 90%);
+
+          &:hover {
+            background: linear-gradient(to bottom, rgba(254, 156, 161, 1) 10%, rgba(254, 156, 161, 1) 90%);
+            .service-icon {
+              img {
+                transform: scale(1.2);
+              }
+            }
+          }
+
+          .service-icon {
+            img {
+              width: 90%;
+              margin-bottom: -30%;
+            }
+          }
+        }
+
+        &.phone-book {
+          background: linear-gradient(to bottom, rgba(96, 188, 254, 1) 10%, rgba(222, 240, 250, 1) 90%);
+
+          &:hover {
+            background: linear-gradient(to bottom, rgba(96, 188, 254, 1) 10%, rgba(96, 188, 254, 1) 90%);
+            .service-icon {
+              img {
+                transform: scale(1.2);
+              }
+            }
+          }
+
+          .service-icon {
+            img {
+              width: 95%;
+              margin-bottom: -30%;
+            }
+          }
+        }
+
+        .service-icon {
+          img {
+            transition: all linear 0.1s;
+          }
+
+          .mat-icon {
+            align-self: center;
+            width: 40px;
+            height: 40px;
+            font-size: 35px;
+            color: #90caf9;
+          }
+        }
+
+        .service-caption {
+          display: flex;
+          flex-direction: row;
+          justify-content: center;
+          align-items: center;
+          width: 100%;
+          height: 30px;
+          padding-top: 15px;
+          font-family: 'Open Sans', serif;
+          font-size: 13px;
+          line-height: 12px;
+          font-weight: 300;
+          text-align: center;
+          color: white;
+        }
+      }
+
+
+    }
+  }
+
+  .content-column {
+    flex: 1;
+    .row {
+      &.people {
+        border-top: 1px dotted #eeeeee;
+      }
+
+      &.separator {
+        & > div {
+          border-top: 1px solid #f5f5f5;
+          .mat-icon {
+            width: 42px;
+            margin-top: -12px;
+            text-align: center;
+            color: #f5f5f5;
+            background: white;
+          }
+        }
+      }
+    }
+  }
+}
+
+
+
 #app-content {
   z-index: 5;
   position: relative;
   margin-right: auto;
   margin-left: auto;
+  background: white;
+  border-top-left-radius: 4px;
+
+  .service-column {
+    background: #eceff1;
+    border-top-left-radius: 4px;
+  }
 
   .row {
     &.people {
