--- a/projects/portal/src/styles/search-bar.less
+++ b/projects/portal/src/styles/search-bar.less
@@ -9,9 +9,9 @@
   .prefix {
     width: 50px;
     height: 45px;
-    background: #eceff1;
-    border-top-left-radius: 4px;
-    border-bottom-left-radius: 4px;
+    background: #F7F7F7;
+    border-top-left-radius: 12px;
+    border-bottom-left-radius: 12px;
 
     .mat-icon {
       display: flex;
@@ -22,8 +22,8 @@
       height: 45px;
       font-size: 25px;
       color: #b0bec5;
-      border-top-left-radius: 4px;
-      border-bottom-left-radius: 4px;
+      border-top-left-radius: 12px;
+      border-bottom-left-radius: 12px;
     }
   }
 
@@ -33,21 +33,22 @@
     flex: 1;
     height: 45px;
     padding: 7px 10px 7px 0px;
-    font-family: 'Comfortaa', cursive;
+    font-family: 'Open Sans', Serif;
     font-size: 14px;
     font-weight: 300;
     text-overflow: ellipsis;
     color: #b0bec5;
     border: none;
     outline: none;
-    border-radius: 4px;
-    background: #eceff1;
+    border-top-right-radius: 12px;
+    border-bottom-right-radius: 12px;
+    background: #F7F7F7;
   }
 
   .postfix {
     width: 50px;
     height: 45px;
-    background: #eceff1;
+    background: #F7F7F7;
     border-top-right-radius: 4px;
     border-bottom-right-radius: 4px;
 
