--- a/projects/portal/src/styles/sections.less
+++ b/projects/portal/src/styles/sections.less
@@ -3,11 +3,12 @@
   flex-direction: row;
   justify-content: flex-start;
   align-items: center;
-  height: 45px;
-  font-family: 'Comfortaa', cursive;
-  font-size: 14px;
-  font-weight: 500;
-  text-transform: uppercase;
+  // height: 45px;
+  font-family: 'Open Sans', serif;
+  font-size: 24px;
+  line-height: 22px;
+  font-weight: 300;
+  //text-transform: uppercase;
   color: #004f8c !important;
   // padding: 0px 0px 20px 0px;
 
