--- a/projects/portal/src/app/adverts/components/adverts-search/adverts-search.component.html
+++ b/projects/portal/src/app/adverts/components/adverts-search/adverts-search.component.html
@@ -1,4 +1,4 @@
-<div class="search-bar w-100">
+<div class="search-bar dark w-100">
   <div class="prefix">
     <mat-icon>search</mat-icon>
   </div>
