--- a/projects/portal/src/app/portal/components/portal/portal.component.less
+++ b/projects/portal/src/app/portal/components/portal/portal.component.less
@@ -1,6 +1,6 @@
-@app-header-height: 800px;
+@app-header-height: 200px;
 @app-header-border-bottom: 5px solid #eeeeee;
-@app-content-margin-top: -650px;
+@app-content-margin-top: -50px;
 @app-content-border-radius: 12px;
 @app-footer-height: 200px;
 @app-background-color: #fafafa;
@@ -63,6 +63,15 @@ header {
       outline: none;
     }
   }
+}
+
+#application-background {
+  position: fixed;
+  z-index: 1;
+  top: 0px;
+  left: 0px;
+  right: 0px;
+  bottom: 0px;
 }
 
 main {
