--- a/projects/portal/src/styles.less
+++ b/projects/portal/src/styles.less
@@ -1,5 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
 @import '~bootstrap/dist/css/bootstrap.css';
+@import '../../kolenergo-core/src/lib/ui/styles';
 @import './styles/common';
 @import './styles/articles';
 @import './styles/switcher';
@@ -11,5 +12,5 @@
 @import './styles/adverts';
 @import './styles/search-bar';
 @import './styles/add-advert-dialog';
-@import './styles/button';
+// @import './styles/button';
 @import './styles/content';
