--- a/projects/portal/src/styles/sections.less
+++ b/projects/portal/src/styles/sections.less
@@ -1,8 +1,8 @@
 .section-caption {
   display: flex;
-  flex-direction: row;
-  justify-content: flex-start;
-  align-items: center;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: flex-start;
   // height: 45px;
   font-family: 'Open Sans', serif;
   font-size: 24px;
@@ -14,10 +14,6 @@
 
   &.small {
     height: 30px;
-  }
-
-  a {
-    color: #004f8c !important;
   }
 
   .attribute {
