--- a/projects/portal/src/app/portal/components/portal/portal.component.html
+++ b/projects/portal/src/app/portal/components/portal/portal.component.html
@@ -1,10 +1,10 @@
 <div id="app">
   <!-- Start: Шапка приложения -->
   <header>
-    <kol-slider [interval]="20">
+    <!--<kol-slider [interval]="20">
       <kol-slide [url]="'http://127.0.0.1:4200/assets/header-bg-1.jpg'"></kol-slide>
       <kol-slide [url]="'http://127.0.0.1:4200/assets/header-bg-7.jpg'"></kol-slide>
-    </kol-slider>
+    </kol-slider>-->
     <div class="gradient"></div>
     <div class="content">
       <div class="row no-gutters justify-content-center">
@@ -24,6 +24,13 @@
     </div>
   </header>
   <!-- End: Шапка приложения -->
+
+  <div id="application-background">
+    <kol-slider [interval]="20">
+      <kol-slide [url]="'http://127.0.0.1:4200/assets/header-bg-1.jpg'"></kol-slide>
+      <kol-slide [url]="'http://127.0.0.1:4200/assets/header-bg-7.jpg'"></kol-slide>
+    </kol-slider>
+  </div>
 
   <!-- Start: Контент приложения -->
   <main>
