--- a/projects/portal/src/styles/search-bar.less
+++ b/projects/portal/src/styles/search-bar.less
@@ -37,20 +37,29 @@
     font-size: 14px;
     font-weight: 300;
     text-overflow: ellipsis;
-    color: #b0bec5;
+    color: #607d8b;
     border: none;
     outline: none;
-    border-top-right-radius: 12px;
-    border-bottom-right-radius: 12px;
     background: #F7F7F7;
+
+    &:last-child {
+      border-top-right-radius: 12px;
+      border-bottom-right-radius: 12px;
+    }
+
+    &::placeholder {
+      color: #90a4ae;
+    }
   }
 
   .postfix {
     width: 50px;
     height: 45px;
     background: #F7F7F7;
-    border-top-right-radius: 4px;
-    border-bottom-right-radius: 4px;
+    &:last-child {
+      border-top-right-radius: 12px;
+      border-bottom-right-radius: 12px;
+    }
 
     .mat-icon {
       display: flex;
@@ -61,9 +70,20 @@
       height: 45px;
       font-size: 25px;
       color: #b0bec5;
-      border-top-right-radius: 4px;
-      border-bottom-right-radius: 4px;
       cursor: pointer;
+
+      &:hover {
+        color: #90a4ae;
+      }
+    }
+  }
+
+  &.dark {
+    .prefix {
+      background: #f5f5f5;
+    }
+    input[type='text'] {
+      background: #f5f5f5;
     }
   }
 }
